<resources>
    <string name="app_name">PreferenceFragment</string>
    <string name="prefs_welcome_message_default">Hello</string>
    <string name="prefs_welcome_message_key">welcome_message_key</string>
    <string name="prefs_welcome_message_title">Welcome message</string>
    <string name="prefs_color_default">blue</string>
    <string name="prefs_color_key">color_key</string>
    <string name="prefs_color_title">Text color</string>
    <string name="prefs_color_red_entry">Red Text</string>
    <string name="prefs_color_blue_entry">Blue Text</string>
    <string name="prefs_color_green_entry">Green Text</string>
    <string name="prefs_color_red_value">red</string>
    <string name="prefs_color_blue_value">blue</string>
    <string name="prefs_color_green_value">green</string>
    <string name="prefs_show_message_key">show_message</string>
    <string name="prefs_show_message_on">Yes</string>
    <string name="prefs_show_message_off">No</string>
    <string name="prefs_show_message_title">Show message</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_title">MainActivity</string>
    <string name="activity_settings_title">Settings</string>
</resources>
