<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/prefs_welcome_message_default"
        android:key="@string/prefs_welcome_message_key"
        android:inputType="text"
        android:singleLine="true"
        android:title="@string/prefs_welcome_message_title" />

    <ListPreference
        android:defaultValue="@string/prefs_color_default"
        android:key="@string/prefs_color_key"
        android:entries="@array/prefs_color_entries"
        android:entryValues="@array/prefs_color_values"
        android:title="@string/prefs_color_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/prefs_show_message_key"
        android:summaryOn="@string/prefs_show_message_on"
        android:summaryOff="@string/prefs_show_message_off"
        android:title="@string/prefs_show_message_title" />

</PreferenceScreen>